[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fhir_search_validator_agent"
version = "0.1.0"
description = "Reusable FHIR query validator utility extracted from a notebook demo."
authors = [
  {name = "Generated Utility", email = "noreply@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["fhir", "validation", "query", "healthcare"]
dependencies = [
  "requests>=2.31.0,<3",
  "python-dotenv>=1.0.1,<2",
]

[project.optional-dependencies]
notebook = ["jupyter>=1.0.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "bandit>=1.7", "pip-audit>=2.7"]

[project.scripts]
fhir-validate = "fhir_validator_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that call live FHIR servers",
    "regression: fixed regression cases from tests/regression/cases.json",
]
addopts = [
    "-ra",
    "--strict-markers",
]

[tool.coverage.run]
source = ["fhir_validator_agent"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 80
include = [
    "src/fhir_validator_agent/core/*",
    "src/fhir_validator_agent/services/*",
]
